{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player1Actions",
            "id": "a996ed18-03c2-4e71-a03b-fec79b906a39",
            "actions": [
                {
                    "name": "Pulse",
                    "type": "Button",
                    "id": "64810467-3d89-44eb-81f2-3f06bd268147",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PowerUp",
                    "type": "Button",
                    "id": "5f9e4b4f-43af-4a34-8782-81f44e0f7422",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "89bc0b2c-476b-4105-81fd-af156adf04a4",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pulse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d6c1f1b-597f-4c97-8317-092ce34cd009",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pulse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c14b656-e0ed-4948-9708-20f6d8c9215d",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PowerUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8e93df67-af71-44ba-aa10-481bf9b054da",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PowerUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player2Actions",
            "id": "8cb90f70-50c2-4857-93fd-5dcbbfcb2dcf",
            "actions": [
                {
                    "name": "Pulse",
                    "type": "Button",
                    "id": "168556df-a6c9-4cc2-b276-e6f4841c6815",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PowerUp",
                    "type": "Button",
                    "id": "2b623f8f-b922-463a-b3c6-7156b751e22a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "56f26336-bd1a-40c0-ab55-53df2a669950",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pulse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "11b287d7-2cdc-4806-b1c2-73b5bc84d28a",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pulse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2bbd2f55-0d0c-4660-a0bc-4607eaa1fea4",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PowerUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f1ecbde-b45c-4c8e-9c34-112f3a005439",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PowerUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerMovement",
            "id": "63971834-6b45-424b-a827-59b93cc05c2e",
            "actions": [
                {
                    "name": "Player1Move",
                    "type": "Value",
                    "id": "89866045-f4a3-4b81-91a2-a469b86f1ccd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Player2Move",
                    "type": "Value",
                    "id": "b77b70b3-3267-43ad-8641-0a68db50b930",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5c828a10-2b7e-4696-a9ee-6338b38c4cbb",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Player1Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "99c99537-0b3f-42d8-a23e-15dc1c103f8b",
                    "path": "Dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player2Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4da4b699-b1e3-4bf5-8760-bae25de0e7f0",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Player2Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "316e51c6-947c-41db-9ecf-948c8147634a",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Player2Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b10a6ac8-c6fd-4fab-8d78-79e068c8afeb",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Player2Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "WASD",
                    "id": "5b1edec3-3373-4cdc-a042-fe6c39f861c4",
                    "path": "Dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player1Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f527702b-d3d4-4dbc-b01f-abdd01a24971",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Player1Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f39be474-2038-42be-8491-59c6acdf2d4e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Player1Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "30059cc6-5236-4baa-8cdb-75763b107a4b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Player1Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "90834521-1722-4f4f-84cb-8339856251e9",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Player2Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}